--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Blog site for E-Fever",
   "main": "build.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node build.js"
   },
   "author": "E-Fever",
   "license": "BSD",
