--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,14 @@ node_js:
   - "0.12"
   - "0.11"
   - "0.10"
+
+deploy:
+  provider: releases
+  api_key: dcb46df0653ac308cdda74eebb3797658093fee0
+  file: 
+    - "./build/*"
+    - "./build/*/*"
+    - "./build/*/*/*"
+  skip_cleanup: true
+  on:
+    tags: true
