no idea how travis deploy works

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ deploy:
     - ./build/*
     - ./build/*/*
     - ./build/*/*/*
-  on:
-    repo: e-fever/blog
-    branches:
-      - development
+  repo: e-fever/blog
+  branches:
+    only:
       - master
