--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ node_js:
 
 deploy:
   provider: script
-  script: bash ./deploy.sh
+  script: bash -x ./deploy.sh
 
 #before_deploy: git fetch --tags
 
